testcases/negative/unsupported_version_3_0.vcf
BEGIN:VCARD
VERSION:3.0
N:Doe;John;;;
FN:John Doe
TEL;TYPE=HOME,VOICE:+1-555-1234
EMAIL;TYPE=INTERNET:john@example.com
END:VCARD
